# metrics

./: .gitignore  .mise.toml  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
src/app/parsers/: cpu.py  disk.py  filesystem.py  memory.py  network.py
src/app/services/: sadf.py
src/app/tabs/: cpu.py  filesystem.py  memory.py  network.py
src/app/tabs/disk/: __init__.py  capacity.py  latency.py  throughput.py  utilization.py
tests/: test_parsers.py
