[project]
name = "metrics"
version = "0.1.0"
description = "Simple SAR viewer (Streamlit) with v11/v12 auto handling"
readme = "AGENTS.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "ktny" }]
dependencies = [
  "streamlit>=1.35",
  "pandas>=2.0",
]

[tool.uv]
dev-dependencies = [
  "ruff>=0.5.5",
  "pyright>=1.1.377",
  "pre-commit>=3.7.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "UP", # pyupgrade
]
ignore = []

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"
